# Sp_rvr_node

devel/: .catkin  local_setup.sh
devel/include/minibot_msgs/: AddVisibleObjects.h  AddVisibleObjectsRequest.h  AddVisibleObjectsResponse.h  segment_sign_command.h  segment_sign_commandRequest.h  segment_sign_commandResponse.h  set_url.h  set_urlRequest.h  set_urlResponse.h
devel/include/sphero_rvr_msgs/: BatteryState.h  BatteryStateRequest.h  BatteryStateResponse.h  Color.h  MoveToPosAndYaw.h  MoveToPosAndYawRequest.h  MoveToPosAndYawResponse.h  MoveToPose.h  MoveToPoseRequest.h  MoveToPoseResponse.h  SetLeds.h  SetLedsRequest.h  SetLedsResponse.h  SetPosAndYaw.h  SetPosAndYawRequest.h  SetPosAndYawResponse.h  TriggerLedEvent.h  TriggerLedEventRequest.h  TriggerLedEventResponse.h
devel/lib/pkgconfig/: minibot_msgs.pc  serial.pc  sphero_rvr_description.pc  sphero_rvr_hw.pc  sphero_rvr_movement.pc  sphero_rvr_msgs.pc
devel/lib/python3/dist-packages/sphero_sim/: __init__.py
devel/lib/serial/: serial_example
devel/lib/sphero_rvr_description/: tf2_relay
devel/lib/sphero_rvr_hw/: base_controller  rvr-ros-sim.py  rvr-ros.py  sphero_rvr_hw_node
devel/share/minibot_msgs/cmake/: minibot_msgs-msg-paths.cmake  minibot_msgsConfig.cmake
devel/share/roseus/ros/minibot_msgs/: manifest.l
devel/share/roseus/ros/sphero_rvr_msgs/: manifest.l
devel/share/serial/cmake/: serialConfig.cmake
devel/share/sphero_rvr_description/cmake/: sphero_rvr_descriptionConfig.cmake
devel/share/sphero_rvr_hw/cmake/: sphero_rvr_hwConfig.cmake
devel/share/sphero_rvr_movement/cmake/: sphero_rvr_movementConfig.cmake
devel/share/sphero_rvr_msgs/cmake/: sphero_rvr_msgs-msg-extras.cmake  sphero_rvr_msgs-msg-paths.cmake  sphero_rvr_msgsConfig.cmake
src/ros-sphero-rvr/: .gitignore  README.md  ros-sphero-rvr.repos
src/ros-sphero-rvr/docs/: ros-test-neotic-meldic-pub-sub
src/ros-sphero-rvr/ros-sphero-rvr-msgs/: README.md
src/ros-sphero-rvr/ros-sphero-rvr-msgs/sphero_rvr_msgs/: CMakeLists.txt  package.xml
src/ros-sphero-rvr/ros-sphero-rvr-msgs/sphero_rvr_msgs/msg/: Color.msg
src/ros-sphero-rvr/ros-sphero-rvr-msgs/sphero_rvr_msgs/srv/: BatteryState.srv  MoveToPosAndYaw.srv  MoveToPose.srv  (+3 more)
src/ros-sphero-rvr/serial_lib/: package.xml
src/ros-sphero-rvr/serial_lib/doc/: Doxyfile  serial.dox
src/ros-sphero-rvr/serial_lib/examples/: serial_example.cc
src/ros-sphero-rvr/serial_lib/src/: serial.cc
src/ros-sphero-rvr/serial_lib/tests/: unix_serial_tests.cc
src/ros-sphero-rvr/serial_lib/visual_studio/: visual_studio.sln
src/ros-sphero-rvr/sphero_rvr/: CMakeLists.txt
src/ros-sphero-rvr/sphero_rvr/launch/: bringup_rvr (copy).launch  bringup_rvr.launch  bringup_rvr_2.launch  bringup_rvr_in_world.launch  bringup_rvr_joy.launch
src/ros-sphero-rvr/sphero_rvr/scripts/: color_listener.py  rvr_joystick_control (copy).py  rvr_joystick_control.py  rvr_joystick_control_launch.py
src/ros-sphero-rvr/sphero_rvr_description/: CMakeLists.txt  package.xml
src/ros-sphero-rvr/sphero_rvr_description/config/: multiple_robots.rviz  single_robot.rviz
src/ros-sphero-rvr/sphero_rvr_description/launch/: display.launch  sphero_rvr-sim.launch  sphero_rvr.launch
src/ros-sphero-rvr/sphero_rvr_description/meshes/: Sphero_Base.stl  Sphero_Wheel.stl  Sphero_Wheel_L.stl  Sphero_Wheel_R.stl
src/ros-sphero-rvr/sphero_rvr_description/model/: materials.urdf  sphero_rvr.inertia.xacro  sphero_rvr.transmission.gazebo.xacro  sphero_rvr.transmission.xacro  sphero_rvr.urdf.xacro
src/ros-sphero-rvr/sphero_rvr_description/robot/: sphero_rvr_in_world.urdf.xacro
src/ros-sphero-rvr/sphero_rvr_description/src/: tf2_relay.cpp
src/ros-sphero-rvr/sphero_rvr_hw/: CMakeLists.txt  setup.py
src/ros-sphero-rvr/sphero_rvr_hw/config/: controller.maybe.config.yaml  controllers.yaml  controllers.yaml.diffdrive  hardware_interfaces.yaml  names.yaml  sim_controllers.yaml
src/ros-sphero-rvr/sphero_rvr_hw/launch/: hw_controller.launch  hw_controller_maintenance.launch  restart_hw_controller.launch
src/ros-sphero-rvr/sphero_rvr_hw/rvr++/: README.md
src/ros-sphero-rvr/sphero_rvr_hw/rvr++/include/: ReadPacket.h  SerialPort.h  rvr++.h
src/ros-sphero-rvr/sphero_rvr_hw/rvr++/src/: Response.cpp
src/ros-sphero-rvr/sphero_rvr_hw/scripts/: .fw  Atriz_rvr_node.py  cmd_vel_rviz.py  rvr-ros-restarter.py  rvr-ros.py  rvr_tools.py
src/ros-sphero-rvr/sphero_rvr_hw/scripts/sphero_sdk/asyncio/client/dal/: serial_async_dal.py
src/ros-sphero-rvr/sphero_rvr_hw/scripts/sphero_sdk/asyncio/client/firmware/: rvr_fw_check_async.py
src/ros-sphero-rvr/sphero_rvr_hw/scripts/sphero_sdk/common/firmware/: cms_fw_check_base.py
src/ros-sphero-rvr/sphero_rvr_hw/scripts/sphero_sim/: __init__.py  sphero_sim.py
src/ros-sphero-rvr/sphero_rvr_hw/src/: base_controller.cpp  sphero_rvr_hw_interface.cpp  sphero_rvr_hw_interface.h  sphero_rvr_hw_node.cpp
src/ros-sphero-rvr/sphero_rvr_movement/: CMakeLists.txt  package.xml
src/ros-sphero-rvr/sphero_rvr_movement/scripts/: movement_examples.py
(+75 files in other folders)
